<resources>
    <string name="app_name" translatable="false">GuessNumber</string>

    <string name="config_tv_title_text">Introduce tus datos</string>
    <string name="config_ed_name_hint">Nombre</string>
    <string name="config_ed_tries_hint">Número de intentos</string>
    <string name="config_b_play_text">¡A jugar!</string>

    <string name="play_tv_title_text">Adivina el Número</string>
    <string name="play_tv_message_placeholder">mensaje</string>
    <string name="play_ed_guess_hint">Introduce tu respuesta</string>
    <string name="play_b_check_text">Verificar</string>
    <string name="play_b_restart_text">Reiniciar</string>
    <string name="play_b_finish_text">Terminar</string>

    <string name="endplay_tv_final_message_placeholder">mensaje final</string>
    <string name="endplay_tv_final_message_success">¡Enhorabuena %s! Has adivinado el número %d\nen %d intento/s</string>
    <string name="endplay_tv_final_message_failure">Lo siento %s, el número era %d.\n¡Suerte para la próxima!</string>

    <string name="ed_number_digits" translatable="false">0123456789.</string>

    <string name="error_til_name_empty">Introduce tu nombre</string>
    <string name="error_til_integer_empty">Introduce un número de intentos</string>
    <string name="error_til_integer_format">Introduce un número válido</string>
    <string name="error_til_integer_not_positive">El número debe ser mayor que 0</string>
    <string name="error_tv_message_greater_than">%d es mayor que la solución.\nIntentos: %d</string>
    <string name="error_tv_message_less_than">%d es menor que la solución.\nIntentos: %d</string>
    <string name="error_tv_message_out_of_tries">Sin intentos</string>
</resources>