<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.guessnumber.ui.configactivity.usecase.ConfigViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.configactivity.ConfigActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/config_tv_title_text"
            android:textSize="@dimen/tv_title_textsize"
            app:layout_constraintBottom_toTopOf="@+id/tilName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@+id/tilTries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_name_hint"
                android:text="@={viewmodel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTries"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/bPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/ed_number_digits"
                android:hint="@string/config_ed_tries_hint"
                android:inputType="number"
                android:text="@={viewmodel.maxTries}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_b_play_text"
            android:textSize="@dimen/button_textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilTries" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>