<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.guessnumber.ui.playactivity.usecase.PlayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.playactivity.PlayActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/play_tv_title_text"
            android:textSize="@dimen/tv_title_textsize"
            app:layout_constraintBottom_toTopOf="@+id/tilGuess"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGuess"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@+id/tvMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edGuess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/ed_number_digits"
                android:hint="@string/play_ed_guess_hint"
                android:inputType="number"
                android:text="@={viewmodel.guess}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/play_tv_message_text"
            android:textSize="@dimen/tv_message_textsize"
            app:layout_constraintBottom_toTopOf="@+id/bCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilGuess" />

        <Button
            android:id="@+id/bCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_b_check_text"
            android:textSize="@dimen/button_textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bRestart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

        <Button
            android:id="@+id/bRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_b_restart_text"
            android:textSize="@dimen/button_textsize"
            app:layout_constraintBottom_toBottomOf="@+id/bCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bCheck"
            app:layout_constraintTop_toTopOf="@+id/bCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>